add structured output, reduce dataset to 6 months, schema_driven -> zero_shot, fix requirements, code cleanup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-kagglehub
 numpy
 pandas
 ipykernel
 scikit-learn
 langchain[openai, ollama]
-pywaves
+pywaves-ce
 python-dotenv
 loguru
 matplotlib
